# colourista

./: .hlint.yaml  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  colourista.cabal  stack-8.4.4.yaml  stack-8.6.5.yaml  stack.yaml
.github/: CODEOWNERS
.github/workflows/: cabal.yml  ci.yml  hlint-standalone.yml  hlint.yml  stack.yml
src/: Colourista.hs
src/Colourista/: IO.hs  Mode.hs  Pure.hs  Short.hs
stack/: stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.2.yaml
test/: Spec.hs
test/Test/: Colourista.hs
