cabal-version:       2.4
name:                colourista
version:             0.1.0.0
synopsis:            Convenient interface for printing colourful messages
description:         Convenient interface for printing colourful messages based on the @ansi-terminal@ library.
homepage:            https://github.com/kowainik/colourista
bug-reports:         https://github.com/kowainik/colourista/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Terminal, ANSI
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/colourista.git

library
  hs-source-dirs:      src
  exposed-modules:     Colourista
                         Colourista.IO
                         Colourista.Pure
                         Colourista.Short

  build-depends:       base >= 4.10.1.0 && < 4.15
                     , ansi-terminal ^>= 0.10
                     , bytestring ^>= 0.10
                     , text ^>= 1.2.3.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
  if impl(ghc >= 8.10.1)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
