cabal-version:       2.4
name:                colourista
version:             0.2.0.0
synopsis:            Simple and convenient interface for colourful outputting
description:
    Convenient interface for printing colourful messages based on the @ansi-terminal@ library.
    Supports enabling and disabling of colouring based on
    the [Implicit Parameters](https://downloads.haskell.org/ghc/latest/docs/html/users_guide/glasgow_exts.html#implicit-parameters)
    GHC feature.
    .
    Usage and output example:
    .
    * ![Example](https://user-images.githubusercontent.com/4276606/90915207-0c2d7180-e3d7-11ea-934c-ec840118ed73.png)

homepage:            https://github.com/kowainik/colourista
bug-reports:         https://github.com/kowainik/colourista/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Terminal, ANSI
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/colourista.git

library
  hs-source-dirs:      src
  exposed-modules:     Colourista
                         Colourista.IO
                         Colourista.Mode
                         Colourista.Pure
                         Colourista.Short

  build-depends:       base >= 4.10.1.0 && < 4.15
                     , ansi-terminal >= 0.10 && < 0.12
                     , bytestring ^>= 0.10
                     , ghc-prim >= 0.5 && < 0.7
                     , text ^>= 1.2.3.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
  if impl(ghc >= 8.10.1)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
