cabal-version:       2.4
name:                colourista
version:             0.1.0.2
synopsis:            Convenient interface for printing colourful messages
description:         Convenient interface for printing colourful messages based on the @ansi-terminal@ library.
homepage:            https://github.com/kowainik/colourista
bug-reports:         https://github.com/kowainik/colourista/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020-2022 Kowainik
category:            Terminal, ANSI
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.4
                     GHC == 9.0.2
                     GHC == 9.2.4
                     GHC == 9.4.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/colourista.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.18

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Colourista
                         Colourista.IO
                         Colourista.Pure
                         Colourista.Short

  build-depends:       ansi-terminal >= 0.10 && < 0.12
                     , bytestring >= 0.10 && < 0.12
                     , text >= 1.2.3.0 && < 2.1

test-suite colourista-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Colourista

  build-depends:       colourista
                     , bytestring
                     , hspec >= 2.7.1 && < 2.11
                     , text

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
